# catalogo-de-produtos-pyramid

./: .gitignore  README.md  development.ini  pyproject.toml  requirements.txt  setup.py
mycatalog/: __init__.py  models.py
mycatalog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mycatalog/static/css/: style.css
mycatalog/templates/: home.jinja2
mycatalog/templates/products/: add.jinja2  delete.jinja2  edit.jinja2  list.jinja2
mycatalog/views/: products.py
